5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3512/executions/1756_1583.log
== SUBMITION (2019-05-28 21:51:53) 
-- CODE:
from numpy import *

bolsonaro = input("hcsdchsv: ").upper()
bolsonaro = bolsonaro.replace('','')

hdtv= ""
cont=-1
haddadnao= 1
ustra=0

while(cont>= -len(bolsonaro)):
	hdtv=hdtv + bolsonaro[cont]
	if(bolsonaro[ustra]) != (bolsonaro[cont]):
		haddadnao= 0 
	ustra = ustra + 1
	cont= cont - 1
	
print(bolsonaro)
print(haddadnao)
-- EXECUTION TIME:
0.443905
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
0
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123456789000987654321
1
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987654321
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:51:56) 
-- CODE:
from numpy import *

bolsonaro = input("hcsdchsv: ").upper()
bolsonaro = bolsonaro.replace('','')

hdtv= ""
cont=-1
haddadnao= 1
ustra=0

while(cont>= -len(bolsonaro)):
	hdtv=hdtv + bolsonaro[cont]
	if(bolsonaro[ustra]) != (bolsonaro[cont]):
		haddadnao= 0 
	ustra = ustra + 1
	cont= cont - 1
	
print(bolsonaro)
print(haddadnao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:54:15) 
-- CODE:
from numpy import *

bolsonaro = input("hcsdchsv: ").upper()
bolsonaro = bolsonaro.replace('','')

hdtv= ""
cont=-1
haddadnao= 1
ustra=0

while(cont >= -len(bolsonaro)):
	hdtv=hdtv + bolsonaro[cont]
	if(bolsonaro[ustra]) != (bolsonaro[cont]):
		haddadnao= 0 
	ustra = ustra + 1
	cont= cont - 1
	
print(bolsonaro)
print(haddadnao)
-- EXECUTION TIME:
0.40481
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
0
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123456789000987654321
1
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987654321
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:54:15) 
-- CODE:
from numpy import *

bolsonaro = input("hcsdchsv: ").upper()
bolsonaro = bolsonaro.replace('','')

hdtv= ""
cont=-1
haddadnao= 1
ustra=0

while(cont >= -len(bolsonaro)):
	hdtv=hdtv + bolsonaro[cont]
	if(bolsonaro[ustra]) != (bolsonaro[cont]):
		haddadnao= 0 
	ustra = ustra + 1
	cont= cont - 1
	
print(bolsonaro)
print(haddadnao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:54:42) 
-- CODE:
from numpy import *

bolsonaro = input("hcsdchsv: ").upper()
bolsonaro = bolsonaro.replace('','')

hdtv= ""
cont= -1
haddadnao= 1
ustra=0

while(cont >= -len(bolsonaro)):
	hdtv=hdtv + bolsonaro[cont]
	if(bolsonaro[ustra]) != (bolsonaro[cont]):
		haddadnao= 0 
	ustra = ustra + 1
	cont= cont - 1
	
print(bolsonaro)
print(haddadnao)
-- EXECUTION TIME:
0.521381
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
0
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123456789000987654321
1
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987654321
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:54:48) 
-- CODE:
from numpy import *

bolsonaro = input("hcsdchsv: ").upper()
bolsonaro = bolsonaro.replace('','')

hdtv= ""
cont= -1
haddadnao= 1
ustra= 0

while(cont >= -len(bolsonaro)):
	hdtv=hdtv + bolsonaro[cont]
	if(bolsonaro[ustra]) != (bolsonaro[cont]):
		haddadnao= 0 
	ustra = ustra + 1
	cont= cont - 1
	
print(bolsonaro)
print(haddadnao)
-- EXECUTION TIME:
0.433447
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
0
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123456789000987654321
1
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987654321
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:55:39) 
-- CODE:
from numpy import *

bolsonaro = input("hcsdchsv: ").upper()
bolsonaro = bolsonaro.replace('','')

hdtv= ""
cont= -1
haddadnao= 1
ustra= 0

while (cont >= -len(bolsonaro)):
	hdtv = hdtv + bolsonaro[cont]
	if(bolsonaro[ustra]) != (bolsonaro[cont]):
		haddadnao= 0 
	ustra = ustra + 1
	cont= cont - 1
	
print(bolsonaro)
print(haddadnao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:56:57) 
-- CODE:
from numpy import *

bolsonaro = input("hcsdchsv: ").upper()
bolsonaro = bolsonaro.replace('','')

hdtv= ""
cont= -1
haddadnao= 1
ustra= 0

while (cont >= -len(bolsonaro)):
	hdtv = hdtv + bolsonaro[cont]
	if(bolsonaro[ustra]) != (bolsonaro[cont]):
		haddadnao= 0 
	ustra = ustra + 1
	cont= cont - 1
	
print(bolsonaro)
print(haddadnao)
-- EXECUTION TIME:
0.420858
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
0
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123456789000987654321
1
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987654321
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:57:37) 
-- CODE:
from numpy import *

bolsonaro = input("hcsdchsv: ").upper()
bolsonaro = bolsonaro.replace('','')

hdtv= "."
cont= -1
haddadnao= 1
ustra= 0

while (cont >= -len(bolsonaro)):
	hdtv = hdtv + bolsonaro[cont]
	if(bolsonaro[ustra]) != (bolsonaro[cont]):
		haddadnao= 0 
	ustra = ustra + 1
	cont= cont - 1
	
print(bolsonaro)
print(haddadnao)
-- EXECUTION TIME:
0.527215
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
0
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123456789000987654321
1
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987654321
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:57:56) 
-- CODE:
from numpy import *

bolsonaro = input("hcsdchsv: ").upper()
bolsonaro = bolsonaro.replace('','')

hdtv= (".")
cont= -1
haddadnao= 1
ustra= 0

while (cont >= -len(bolsonaro)):
	hdtv = hdtv + bolsonaro[cont]
	if(bolsonaro[ustra]) != (bolsonaro[cont]):
		haddadnao= 0 
	ustra = ustra + 1
	cont= cont - 1
	
print(bolsonaro)
print(haddadnao)
-- EXECUTION TIME:
0.558714
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
0
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123456789000987654321
1
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987654321
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:57:57) 
-- CODE:
from numpy import *

bolsonaro = input("hcsdchsv: ").upper()
bolsonaro = bolsonaro.replace('','')

hdtv= (".")
cont= -1
haddadnao= 1
ustra= 0

while (cont >= -len(bolsonaro)):
	hdtv = hdtv + bolsonaro[cont]
	if(bolsonaro[ustra]) != (bolsonaro[cont]):
		haddadnao= 0 
	ustra = ustra + 1
	cont= cont - 1
	
print(bolsonaro)
print(haddadnao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 22:02:35) 
-- CODE:
from numpy import *

bolsonaro = input("hcsdchsv: ").upper()
bolsonaro = bolsonaro.replace('','')

hdtv= (".")
cont= -1
haddadnao= 1
ustra= 0

while (cont >= -len(bolsonaro)):
	hdtv = hdtv + (bolsonaro[cont])
	if(bolsonaro[ustra]) != (bolsonaro[cont]):
		haddadnao= 0 
	ustra = ustra + 1
	cont= cont - 1
	
print(bolsonaro)
print(haddadnao)
-- EXECUTION TIME:
0.54678
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
0
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
hcsdchsv: 123456789000987654321
1
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
hcsdchsv: 987654321
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 22:04:40) 
-- CODE:
from numpy import *

s = input("hcsdchsv: ").upper()
s = s.replace('','')

hdtv= ""
i= -1
haddadnao= 1
ustra= 0

while (cont >= -len(s)):
	hdtv = hdtv + s[i]
	if(s[c]) != (s[i]):
		b= 0 
	c = c + 1
	i= i - 1
	
print(s)
print(b)
-- EXECUTION TIME:
0.430005
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1583/main.py", line 11, in <module>
    while (cont >= -len(s)):
NameError: name 'cont' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:04:41) 
-- CODE:
from numpy import *

s = input("hcsdchsv: ").upper()
s = s.replace('','')

hdtv= ""
i= -1
haddadnao= 1
ustra= 0

while (cont >= -len(s)):
	hdtv = hdtv + s[i]
	if(s[c]) != (s[i]):
		b= 0 
	c = c + 1
	i= i - 1
	
print(s)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:04:54) 
-- CODE:
from numpy import *

s = input("hcsdchsv: ").upper()
s = s.replace('','')

hdtv= ""
i= -1
haddadnao= 1
ustra= 0

while (i >= -len(s)):
	hdtv = hdtv + s[i]
	if(s[c]) != (s[i]):
		b= 0 
	c = c + 1
	i= i - 1
	
print(s)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:05:12) 
-- CODE:
from numpy import *

s = input("hcsdchsv: ").upper()
s = s.replace('','')

hdtv= ""
i= -1
b= 1
c= 0

while (i >= -len(s)):
	hdtv = hdtv + s[i]
	if(s[c]) != (s[i]):
		b= 0 
	c = c + 1
	i= i - 1
	
print(s)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 22:06:30) 
-- CODE:
from numpy import *

s = input("hcsdchsv: ").upper()
s = s.replace(' ',' ')

hdtv= ""
i= -1
b= 1
c= 0

while (i >= - len(s)):
	hdtv = hdtv + s[i]
	if(s[c]) != (s[i]):
		b= 0 
	c = c + 1
	i= i - 1
	
print(s)
print(b)
-- EXECUTION TIME:
0.397317
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
0
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123456789000987654321
1
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987654321
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:06:44) 
-- CODE:
from numpy import *

s = input("hcsdchsv: ").upper()
s = s.replace(' ',' ')

hdtv= ""
i= -1
b= 1
c= 0

while (i >= - len(s)):
	hdtv = hdtv + s[i]
	if(s[c]) != (s[i]):
		b= 0 
	c = c + 1
	i= i - 1
	
print(s)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 22:07:07) 
-- CODE:
from numpy import *

s = input("hcsdchsv: ").upper()
s = s.replace(' ',' ')

hdtv= ""
i= -1
b= 1
c= 0

while (i >= - len(s)):
	hdtv = hdtv + s[i]
	if(s[c]) != (s[i]):
		b= 0 
	c = c + 1
	i= i - 1
	
	print(s)
	print(b)
-- EXECUTION TIME:
0.523312
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
0
123
0
123
0
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123456789000987654321
1
123456789000987654321
1
123456789000987654321
1
123456789000987654321
1
123456789000987654321
1
123456789000987654321
1
123456789000987654321
1
123456789000987654321
1
123456789000987654321
1
123456789000987654321
1
123456789000987654321
1
123456789000987654321
1
123456789000987654321
1
123456789000987654321
1
123456789000987654321
1
123456789000987654321
1
123456789000987654321
1
123456789000987654321
1
123456789000987654321
1
123456789000987654321
1
123456789000987654321
1
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987654321
0
987654321
0
987654321
0
987654321
0
987654321
0
987654321
0
987654321
0
987654321
0
987654321
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 22:07:24) 
-- CODE:
from numpy import *

s = input("hcsdchsv: ").upper()
s = s.replace(' ',' ')

hdtv= ""
i= -1
b= 1
c= 0

while (i >= - len(s)):
	hdtv = hdtv + s[i]
	if(s[c]) != (s[i]):
		b= 0 
	c = c + 1
	i= i - 1
	
print(s)
	print(b)
-- EXECUTION TIME:
0.168992
-- ERROR:
  File "/home/codebench/codes/1756/1583/main.py", line 19
    print(b)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:07:25) 
-- CODE:
from numpy import *

s = input("hcsdchsv: ").upper()
s = s.replace(' ',' ')

hdtv= ""
i= -1
b= 1
c= 0

while (i >= - len(s)):
	hdtv = hdtv + s[i]
	if(s[c]) != (s[i]):
		b= 0 
	c = c + 1
	i= i - 1
	
print(s)
	print(b)
-- ERROR:
File "XXXX", line 19
    print(b)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:07:32) 
-- CODE:
from numpy import *

s = input("hcsdchsv: ").upper()
s = s.replace(' ',' ')

hdtv= ""
i= -1
b= 1
c= 0

while (i >= - len(s)):
	hdtv = hdtv + s[i]
	if(s[c]) != (s[i]):
		b= 0 
	c = c + 1
	i= i - 1
	
print(s)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 22:07:49) 
-- CODE:
from numpy import *

s = input("hcsdchsv: ").upper()
s = s.replace(' ',' ')

hdtv= ""
i= -1
b= 1
c= 0

while (i >= len(s)):
	hdtv = hdtv + s[i]
	if(s[c]) != (s[i]):
		b= 0 
	c = c + 1
	i= i - 1
	
print(s)
print(b)
-- EXECUTION TIME:
0.457295
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
1
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123456789000987654321
1
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987654321
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
